--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.1.0",
     "koa2-cors": "^2.0.6",
-    "mongoose": "^5.9.25"
+    "mongoose": "^5.9.25",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -41,6 +42,7 @@
     "@types/koa-router": "^7.4.1",
     "@types/koa2-cors": "^2.0.1",
     "@types/mongoose": "^5.7.32",
+    "@types/socket.io": "^2.1.10",
     "ts-node": "^8.10.2",
     "tslint": "^6.1.2",
     "tslint-eslint-rules": "^5.4.0",
